--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-#asgiref==3.5.2
-#backports.zoneinfo==0.2.1
-#dj-database-url==1.0.0
-Django==4.1
-#django-on-heroku==1.1.2
-gunicorn==20.1.0
-psycopg2-binary==2.9.3
-#sqlparse==0.4.2
-#tzdata==2022.2
-whitenoise==6.2.0
+django>=4.0,<5.0
+gunicorn>=20.0,<21.0
+dj-database-url>=1.0,<2.0
+whitenoise>=6.0,<7.0
+psycopg2>=2.0,<3.0
